Move mocks package; storage tests
